# specialtopicsintelematics

./: .env  CMakeLists.txt  README.md
Client/: Client.py  gridmr_pb2.py  gridmr_pb2_grpc.py  input.txt
Master/: pom.xml
Master/reports/apidocs/: MasterService.html  allclasses-index.html  allpackages-index.html  constant-values.html  deprecated-list.html  element-list  help-doc.html  index-all.html  index.html  member-search-index.js  overview-summary.html  overview-tree.html  package-search-index.js  package-summary.html  package-tree.html  package-use.html  search.html  serialized-form.html  type-search-index.js
Master/reports/apidocs/class-use/: MasterService.html
Master/reports/apidocs/gridmr/: DataTransferServiceGrpc.AsyncService.html  DataTransferServiceGrpc.DataTransferServiceBlockingStub.html  DataTransferServiceGrpc.DataTransferServiceFutureStub.html  DataTransferServiceGrpc.DataTransferServiceImplBase.html  DataTransferServiceGrpc.DataTransferServiceStub.html  DataTransferServiceGrpc.html  FileChunk.Builder.html  FileChunk.html  FileChunkOrBuilder.html  Gridmr.html  JobRequest.Builder.html  JobRequest.html  JobRequestOrBuilder.html  JobResponse.Builder.html  JobResponse.html  JobResponseOrBuilder.html  MapReduceServiceGrpc.AsyncService.html  MapReduceServiceGrpc.MapReduceServiceBlockingStub.html  MapReduceServiceGrpc.MapReduceServiceFutureStub.html  MapReduceServiceGrpc.MapReduceServiceImplBase.html  MapReduceServiceGrpc.MapReduceServiceStub.html  MapReduceServiceGrpc.html  ReceiveFileRequest.Builder.html  ReceiveFileRequest.html  ReceiveFileRequestOrBuilder.html  SendFileResponse.Builder.html  SendFileResponse.html  SendFileResponseOrBuilder.html  TaskRequest.Builder.html  TaskRequest.html  TaskRequestOrBuilder.html  TaskResponse.Builder.html  TaskResponse.TaskType.html  TaskResponse.html  TaskResponseOrBuilder.html  TaskResult.Builder.html  TaskResult.html  TaskResultOrBuilder.html  TaskResultResponse.Builder.html  TaskResultResponse.html  (+10 more)
Master/reports/apidocs/gridmr/class-use/: DataTransferServiceGrpc.AsyncService.html  DataTransferServiceGrpc.DataTransferServiceBlockingStub.html  DataTransferServiceGrpc.DataTransferServiceFutureStub.html  DataTransferServiceGrpc.DataTransferServiceImplBase.html  DataTransferServiceGrpc.DataTransferServiceStub.html  DataTransferServiceGrpc.html  FileChunk.Builder.html  FileChunk.html  (+39 more)
Master/src/main/java/: MasterService.java
Master/src/main/proto/: gridmr.proto
Worker/: CMakeLists.txt  gridmr.grpc.pb.cc  gridmr.grpc.pb.h  gridmr.pb.cc  gridmr.pb.h  worker.cpp
input_data/: archivo.txt
(+3 files in other folders)
